# aitube

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml  submit_video.sh
.claude/commands/: docker-redeploy.md
backend/: Dockerfile
backend/app/: config.py  main.py
backend/app/models/: content.py  playback.py  subscription.py
backend/app/routers/: add_content.py  chat.py  consumption_report.py  content.py  playback.py  polling.py  subscriptions.py  watchlist.py
backend/app/services/: ad_detector.py  agents.py  anthropic_client.py  content_cache.py  content_cleanup.py  content_dlp.py  content_ingestor.py  elasticsearch.py  feed_poller.py  metadata_extractor.py  playback_buffer.py  summarizer.py  url_resolver.py  youtube_captions.py
backend/scripts/: backfill_durations.py  backfill_viewed.py  poll_feeds.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  apm.ts  index.css  main.tsx  youtube.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AddContent.tsx  ChatPanel.tsx  ContentTabs.tsx  ContentView.tsx  ErrorBanner.tsx  NotFound.tsx  SubscriptionManager.tsx  Timeline.tsx
frontend/src/theme/: ThemeToggle.tsx  theme.ts
tests/: conftest.py  test_watchlist.py
