[project]
name = "aitube"
version = "0.1.0"
description = "Personal feed reader for YouTube, podcasts, and RSS with AI curation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "elasticsearch>=8.17",
    "anthropic>=0.52",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.1",
    "mcp[cli]>=1.9",
]

[project.scripts]
aitube-server = "backend.app.main:start"
aitube-poll = "backend.scripts.poll_feeds:main"

[tool.uv]
package = true
python-preference = "system"
project-environment = "/home/dave/.venvs/aitube"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
