[project]
name = "aitube"
version = "0.1.0"
description = "Personal feed reader for YouTube, podcasts, and RSS with AI curation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "elasticsearch[async]>=8.17",
    "anthropic>=0.52",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.1",
    "mcp[cli]>=1.9",
    "beautifulsoup4>=4.12",
    "yt-dlp>=2025.3",
]

[project.scripts]
aitube-server = "backend.app.main:start"
aitube-poll = "backend.scripts.poll_feeds:main"

[tool.uv]
package = true
python-preference = "system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
